--- a/workbooks/module_02_worksheet.html
+++ b/workbooks/module_02_worksheet.html
@@ -337,7 +337,7 @@
 
         <div class="worksheet-actions">
             <button onclick="window.print()" class="btn btn-print">🖨️ Guardar PDF / Imprimir</button>
-            <a href="../course/modules/module_02.html" class="btn btn-primary">Guardar y Volver al Módulo 2</a>
+            <a href="#" onclick="window.history.back(); return false;" class="btn btn-primary">Guardar y Volver</a>
         </div>
         
     </main>
