--- a/workbooks/module_01_worksheet.html
+++ b/workbooks/module_01_worksheet.html
@@ -330,7 +330,7 @@
         </div>
         <nav>
             <a href="../index.html">Inicio</a>
-            <a href="../course/modules/module_01.html">Volver al Módulo 1</a>
+            <a href="#" onclick="window.history.back(); return false;">Volver al Módulo</a>
         </nav>
     </header>
 
@@ -415,7 +415,7 @@
 
         <div class="worksheet-actions">
             <button onclick="window.print()" class="btn btn-print">🖨️ Guardar PDF / Imprimir</button>
-            <a href="../course/modules/module_01.html" class="btn btn-primary">Guardar y Volver al Módulo 1</a>
+            <a href="#" onclick="window.history.back(); return false;" class="btn btn-primary">Guardar y Volver</a>
         </div>
         
     </main>
