--- a/workbooks/module_07_worksheet.html
+++ b/workbooks/module_07_worksheet.html
@@ -451,4 +451,38 @@
                 <li>🚫 <strong>1. Checklist:</strong> Usar OKRs solo como una lista de tareas administrativas.</li>
                 <li>🚫 <strong>2. Castigo:</strong> Usar los OKRs para regañar o castigar si no se llega al 100%.</li>
                 <li>🚫 <strong>3. Exceso:</strong> Tener más de 3-4 objetivos (Falta de foco absoluto).</li>
-                <li>🚫 <strong>4. Desconexión:</strong> Objetivos sin propósito ("
+                <li>🚫 <strong>4. Desconexión:</strong> Objetivos sin propósito ("Subir 5% ventas" vs "Ayudar a más clientes").</li>
+                <li>🚫 <strong>5. Cascada:</strong> "Bajar" metas jerárquicamente sin escuchar a la base operativa.</li>
+                <li>🚫 <strong>6. Ceguera:</strong> Medir solo el dinero y olvidar por completo medir la cultura y a las personas.</li>
+                <li>🚫 <strong>7. Autopsia:</strong> Revisar el avance solo al final del trimestre (cuando ya murió el paciente y no hay arreglo).</li>
+            </ul>
+        </div>
+
+        <div class="pledge-box">
+            <p class="pledge-text">
+                Yo, <input type="text" class="ws-inline-input" placeholder="Tu nombre">, <br>
+                me comprometo a ser un Líder que Diseña Futuro, <br>
+                usando estas herramientas para inspirar y conectar, no para controlar.
+            </p>
+            <p class="date-line">
+                Fecha: <input type="text" placeholder="DD / MM / AAAA">
+            </p>
+        </div>
+
+        <div class="hero-closing">
+            <p>"El viaje del héroe ha terminado. Regresas a tu oficina, a tu equipo, a tu 'mundo ordinario'... pero ya nada será lo mismo. Tus ojos ahora ven redes de colaboración donde antes veían silos aislados. Ves propósitos y personas donde antes solo veías tareas. El mapa está en tus manos. Es hora de liderar."</p>
+            <span>— Has completado OKRs con Propósito —</span>
+        </div>
+
+        <div class="worksheet-actions">
+            <button onclick="window.print()" class="btn btn-print">🖨️ Guardar PDF / Imprimir</button>
+            <a href="#" onclick="window.history.back(); return false;" class="btn btn-primary">Guardar y Volver</a>
+        </div>
+        
+    </main>
+
+    <footer>
+        <p>© 2026 Cyn de la Torre. Curso OKRs con Propósito. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
