--- a/workbooks/module_07_worksheet.html
+++ b/workbooks/module_07_worksheet.html
@@ -446,7 +446,7 @@
         </div>
 
         <div class="errors-box">
-            <h3>⚠️ Guía Rápida: Los 7 Errores Comunes (¡Evítalos!)</h3>
+            <h3>⚠️ Guía simple: Los 7 Errores Comunes (¡Evítalos!)</h3>
             <ul class="errors-list">
                 <li>🚫 <strong>1. Checklist:</strong> Usar OKRs solo como una lista de tareas administrativas.</li>
                 <li>🚫 <strong>2. Castigo:</strong> Usar los OKRs para regañar o castigar si no se llega al 100%.</li>
